# tortoise-ufh

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTROL_ALGORITHMS_REVIEW.md  LICENSE  README.de.md  README.md  hacs.json  prd-control-brain.md  pyproject.toml
.github/workflows/: ci.yml  validate.yml
custom_components/tortoise_ufh/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  dashboard_tortoise_ufh.yaml  device.py  diagnostics.py  entity_validator.py  manifest.json  number.py  panel.py  readers.py  select.py  sensor.py  services.py  services.yaml  strings.json  switch.py  tuning.py  websocket.py  writers.py
custom_components/tortoise_ufh/core/: __init__.py  building_profiles.py  config.py  const.py  controller.py  dew_point.py  fast_source.py  flow_watchdog.py  hp_link.py  metrics.py  models.py  pid.py  rc_model.py  safety.py  scenarios.py  simulated_room.py  simulation_log.py  simulator.py  trend.py  ufh_loop.py
custom_components/tortoise_ufh/frontend/: tortoise-ufh-panel.js
custom_components/tortoise_ufh/translations/: de.json  en.json  pl.json
dev/: panel-preview.html
docker/: Dockerfile.test  README.md  docker-compose.dev.yml  docker-compose.test.yml
docker/config/: configuration.yaml
docs/: ALGORITHM_SPEC.md  BRANDING.md  BUILD_SPEC.md  DECISIONS.md  HACS_INSTALL_BUG.md  INSTRUKCJA.md  NO_FLOW_WATCHDOG.md  VALVE_DOMAIN_SUPPORT.md
docs/manual/: README.md  de.md  pl.md
tests/: conftest.py
tests/ha/: conftest.py  test_binary_sensor.py  test_config_flow.py  test_coordinator.py  test_devices.py  test_diagnostics.py  test_init.py  test_migration.py  test_number.py  test_panel.py  test_select.py  test_sensor.py  test_services.py  test_switch.py  test_websocket.py
tests/simulation/: conftest.py  test_boost_hold.py  test_no_flow_watchdog.py  test_scenarios.py  test_sim_smoke.py
tests/unit/: conftest.py  test_config_models.py  test_controller.py  test_controller_boost_hold.py  test_controller_round2.py  test_controller_safety.py  test_dew_point.py  test_fast_source.py  test_fast_source_groups.py  test_flicker.py  test_flow_watchdog.py  test_hp_link.py  test_metrics_safety.py  test_packaging_selfcontained.py  test_panel_i18n.py  test_pid.py  test_rc_model.py  test_ufh_loop.py  test_weather_comp.py  test_weather_noise.py
tortoise_ufh/: __init__.py  building_profiles.py  config.py  controller.py  dew_point.py  metrics.py  safety.py  scenarios.py  sensor_noise.py  simulated_room.py  simulation_log.py  simulator.py  ufh_loop.py  weather.py  weather_comp.py
