[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tortoise-ufh"
version = "0.1.0"
description = "Per-room PID climate controller for high-thermal-mass underfloor heating (Home Assistant integration + offline simulator)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Hubert Ciebiada" },
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.8",
    "pandas>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.3",
    "mypy>=1.9",
    "pre-commit>=4.0",
    "tortoise-ufh[viz]",
]
ha-test = [
    "pytest-homeassistant-custom-component>=0.13",
]

[tool.setuptools.packages.find]
include = ["tortoise_ufh*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Fast, isolated unit tests",
    "simulation: Slow scenario-based simulation tests",
    "slow: Tests that take more than a few seconds",
    "ha: Home Assistant integration tests (need pytest-homeassistant-custom-component; run in Docker)",
]
addopts = "-ra -q --strict-markers --tb=short"
filterwarnings = [
    "error",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = ["homeassistant.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["custom_components.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["scipy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pandas.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["matplotlib.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["voluptuous.*"]
ignore_missing_imports = true
