[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tortoise-ufh"
version = "0.6.1"
description = "Per-room PID climate controller for high-thermal-mass underfloor heating (Home Assistant integration + offline simulator)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Hubert Ciebiada" },
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.8",
    "pandas>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.3",
    "mypy>=1.9",
    "pre-commit>=4.0",
    "tortoise-ufh[viz]",
]
ha-test = [
    "pytest-homeassistant-custom-component>=0.13",
]

[tool.setuptools]
# The pure control core is vendored inside the HA integration at
# custom_components/tortoise_ufh/core so a HACS install (which ships only the
# custom_components subtree) is self-contained. There is no importable top-level
# package left to build, so auto-discovery is disabled: `pip install -e .`
# installs project metadata + dependencies only. Tests and the type checker
# reach the core/adapter via the repo root on sys.path (see `pythonpath` below
# and `mypy_path`), matching the Docker harness PYTHONPATH.
packages = []
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]
# Put the repo root on sys.path so the HA adapter package `custom_components`
# is importable when running `tests/ha` (matches the Docker harness's
# PYTHONPATH=/workspace; without it CI fails with ModuleNotFoundError).
pythonpath = ["."]
markers = [
    "unit: Fast, isolated unit tests",
    "simulation: Slow scenario-based simulation tests",
    "slow: Tests that take more than a few seconds",
    "ha: Home Assistant integration tests (need pytest-homeassistant-custom-component; run in Docker)",
]
addopts = "-ra -q --strict-markers --tb=short"
filterwarnings = [
    "error",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
# The pure core now lives at custom_components/tortoise_ufh/core. These let
# `mypy custom_components/tortoise_ufh/core` resolve the core's relative imports
# using the repo root as the package base (custom_components is a namespace
# package, so the modules are custom_components.tortoise_ufh.core.*).
namespace_packages = true
explicit_package_bases = true
mypy_path = "."
# `mypy custom_components/tortoise_ufh/core` checks ONLY the core (its files are
# the explicit targets). Vendoring made the HA adapter the core's package
# ancestor, so mypy would otherwise follow the adapter `__init__` into HA-typed
# modules (untyped websocket/voluptuous decorators) and report on them. The
# adapter is intentionally not strict-typed (it is exercised by the HA test tier,
# not mypy — as before, when the standalone core was the only mypy target), so
# follow dependencies silently: use their types without reporting their errors.
follow_imports = "silent"

[[tool.mypy.overrides]]
module = ["homeassistant.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["custom_components.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["scipy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pandas.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["matplotlib.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["voluptuous.*"]
ignore_missing_imports = true
